Fix text overflow in what's happening

--- a/src/views/splash/splash.scss
+++ b/src/views/splash/splash.scss
@@ -104,6 +104,7 @@
 .social-message {
     border: 0;
     padding: 0;
+    word-break: break-word;
 }
 
 .activity-img {
